--- a/Gallery.html
+++ b/Gallery.html
@@ -162,8 +162,11 @@ body {
 		
 	}
 	.bottum .support-us{
-		width: 20%;
+		width: 16%;
+		height: 60px;
 		display: flex;
+		
+		
 	}
 	
 	.gallery01 .top .image :hover{
@@ -358,9 +361,9 @@ body {
 			
 		   </div>
 		   <div class="support-us">
-		   	<a href="Support Us.html"><img src="images/ABA BAnk.jpg" alt="" style="width: 70px; height: 60px;padding-right: 3px"></a>
-			 <a href="Support Us.html"><img src="images/Aclida.jpg" alt="" style="width: 80px; height: 60px"></a>
-			 <a href="Support Us.html"><img src="images/maybank-islamic-logo.png" alt="" style="width: 90px; height: 60px;padding-left: 3px"></a>
+		   	<a href="Support Us.html">
+			   		<img src="images/Bank.jpg" alt="" style="width: 100%;height: 100%;">
+			   </a>
 		   </div>
 	   </div><br>
 	   <div style="font-family: 'Khmer OS Siemreap'; color: white;text-align: center">© រក្សាសិទ្ធិគ្រប់យ៉ាងដោយ សាលារៀនអាន់នួរកំពត / All Right Reserved By Madrasah Annur Kampot 2024</div><br>
@@ -433,4 +436,4 @@ body {
 		setInterval(function(){
 			updateTime()
 		}, 1000);
-	</script>>>>>
+	</script>
