--- a/index.html
+++ b/index.html
@@ -228,10 +228,9 @@ body {
 		
 	}
 	.bottum .support-us{
-		width: 20%;
-		display: flex;
-		
-		
+		width: 16%;
+		height: 60px;
+		display: flex;		
 	}
 	.time{
 			color: #fff;
@@ -299,7 +298,7 @@ body {
 		   </div>
 		   
            <div class="top-left">
-			   <p style="font-family:'Khmer OS Koulen';font-size: 25px;text-decoration: underline;">សាលារៀនអាន់នួរកំពត</p>
+			   <img src="images/Name Madrasah.png" alt="" style="width: 250px;height: 120%">
 			   <i class="fa-solid fa-phone" style="font-size: 15px"></i> 087 63 85 44 / 018 97 87 000 <br>
 			   <i class="fa-solid fa-envelope" style="font-size: 15px"></i> madrasahannur @gmail.com  
 		   </div>
@@ -470,9 +469,9 @@ body {
 			
 		   </div>
 		   <div class="support-us">
-		   	<a href="Support Us.html"><img src="images/ABA BAnk.jpg" alt="" style="width: 70px; height: 60px;padding-right: 3px;display: flex"></a>
-			 <a href="Support Us.html"><img src="images/Aclida.jpg" alt="" style="width: 80px; height: 60px;display: flex"></a>
-			 <a href="Support Us.html"><img src="images/maybank-islamic-logo.png" alt="" style="width: 90px; height: 60px;padding-left: 3px;display: flex"></a>
+			   <a href="Support Us.html">
+			   		<img src="images/Bank.jpg" alt="" style="width: 100%;height: 100%;">
+			   </a>
 		   </div>
 	   </div><br>
 	   <div style="font-family: 'Khmer OS Siemreap'; color: white;text-align: center">© រក្សាសិទ្ធិគ្រប់យ៉ាងដោយ សាលារៀនអាន់នួរកំពត / All Right Reserved By Madrasah Annur Kampot 2024</div><br>
@@ -545,4 +544,4 @@ body {
 		setInterval(function(){
 			updateTime()
 		}, 1000);
-	</script>>>>>
+	</script>
